--- a/deployment/Jenkinsfile
+++ b/deployment/Jenkinsfile
@@ -88,9 +88,9 @@ podTemplate(
 
                         podman build \
                             --build-arg PROJECT_FOLDER="." \
-                            --build-arg BUILD_FOLDER="deployment" \
+                            --build-arg BUILD_FOLDER="deployment/container" \
                             --build-arg EXPORT_PORT="${props.export_port}" \
-                            -f deployment/Dockerfile-lifesub-web \
+                            -f deployment/container/Dockerfile-lifesub-web \
                             -t ${imagePath} .
                         
                         podman push ${imagePath}
